gh_k8s_runner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cdi-runner
spec:
  finalizers:
    - kubernetes
