gh_k8s_runner/webhook_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actions-runner-controller-github-webhook-server
  namespace: actions-runner-system
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.regional-static-ip-name: webhook-llead-co
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - webhook.llead.co
      secretName: webhook-ssl
  rules:
    - host: webhook.llead.co
      http:
        paths:
          - path: /actions-runner-controller-github-webhook-server
            pathType: Prefix
            backend:
              service:
                name: actions-runner-controller-github-webhook-server
                port:
                  number: 80
